src/main/kotlin/com/example/gymi/global/error/ErrorResponse.kt
package com.example.gymi.global.error

data class ErrorResponse(

        val status: Int,
        val message: String
)